--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -1,14 +1,19 @@
-#Event name
 name: on push
-# when the event should run
 on:
   push:
     branch:
-      -  "**" # this will run on all branches
-# what jobs to execute
+      -  "**"
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
+    env:
     steps:
       - uses: actions/checkout@v2
-# what steps within each job
+          - uses: actions/setup-java@v2
+            with:
+              distribution: 'zulu'
+              java-version: 17
+          - name: Run tests with maven
+            working-directory: webdriver_java
+            run: mvn test
+          # handle remote server chromedriver
