--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -6,6 +6,9 @@ on:
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
+    env:
+      RUNNER_OS: true
+      HEADLESS_CHROME: true
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
