--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -10,6 +10,8 @@ jobs:
       RUNNER_OS: true
       HEADLESS_CHROME: true
     steps:
+      - name: Set start time
+        run: echo "START_TIME=$(date +%s)" >> $GITHUB_ENV
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
         with:
@@ -18,4 +20,6 @@ jobs:
       - name: Run tests with maven
         working-directory: webdriver_java
         run: mvn test
-          # handle remote server chromedriver
+      - name: Collect build data
+        if: always()
+        run: expr $(date +%s) - ${START_TIME}
